--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: rex_emailobfuscator
-version: '1.4.0'
+version: '1.5.0-dev'
 author: Friends Of REDAXO
 supportpage: github.com/FriendsOfREDAXO/rex_emailobfuscator
 
