--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: emailobfuscator
-version: '2.0.0-dev'
+version: '2.0.0'
 author: Friends Of REDAXO
 supportpage: github.com/FriendsOfREDAXO/emailobfuscator
 
