integrate email_obfuscator addon

--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: emailobfuscator
-version: '2.1.6'
+version: '3.0.0'
 author: Friends Of REDAXO
 supportpage: github.com/FriendsOfREDAXO/emailobfuscator
 
@@ -10,3 +10,4 @@ page:
     icon: rex-icon fa-lock
     subpages:
         config: { title: 'translate:config', perm: emailobfuscator[config] }
+        help: { title: 'translate:credits_help', icon: rex-icon rex-icon-help, itemclass: pull-right, perm: emailobfuscator[config] }
